Replaced annotation workflow with PacketCapture CRD and node-owned status

--- a/deploy/test-pod.yaml
+++ b/deploy/test-pod.yaml
@@ -3,6 +3,8 @@ kind: Pod
 metadata:
   name: traffic-generator
   namespace: default
+  labels:
+    app: database
 spec:
   containers:
     - name: traffic
