--- a/deploy/daemonset.yaml
+++ b/deploy/daemonset.yaml
@@ -13,6 +13,9 @@ rules:
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: ["antrea.io"]
+    resources: ["packetcaptures", "packetcaptures/status"]
+    verbs: ["get", "list", "watch", "update", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
