Implement annotation-driven capture flow and refresh deliverables

--- a/deploy/test-pod.yaml
+++ b/deploy/test-pod.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: default
   labels:
     app: database
+  annotations:
+    tcpdump.antrea.io: "5"
 spec:
   containers:
     - name: traffic
