--- a/deploy/daemonset.yaml
+++ b/deploy/daemonset.yaml
@@ -63,6 +63,8 @@ spec:
                   "SYS_PTRACE",
                   "DAC_READ_SEARCH",
                 ]
+          args:
+            - --capture-dir=/captures
           env:
             - name: NODE_NAME
               valueFrom:
